Adjusting responsiveness WIP

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -6,3 +6,13 @@ i {
 .brand {
   font-family: 'Rock Salt', cursive;
 }
+
+.art-slide {
+  background-position: center center;
+}
+
+@media only screen and (min-width: 768px){
+  .art-slide {
+    height: 90vh;
+  }
+}
