Added twitter fa icon Changed link colors in Contact to black Changed visited link colors in Contact to red

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -19,3 +19,17 @@ i {
 .larger-text {
   font-size: 1.25rem;
 }
+
+.social, .social:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.social:visited {
+  text-decoration: none;
+  color: red;
+}
+
+.social i {
+  color: black;
+}
