Lightened background color of About Changed text color from black to same as nav bar

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -3,6 +3,9 @@ i {
   font-size: 20px;
 }
 
+p, h2, h3, .social i {
+  color: #343a40;
+}
 .brand {
   font-family: 'Rock Salt', cursive;
 }
@@ -13,7 +16,7 @@ i {
 }
 
 .about {
-  background-color: rgb(199, 173, 208);
+  background-color: rgb(225, 211, 230);
 }
 
 .larger-text {
@@ -21,15 +24,12 @@ i {
 }
 
 .social, .social:hover {
-  color: black;
+  color: #343a40;
   text-decoration: none;
+  font-size: .80rem;
 }
 
 .social:visited {
   text-decoration: none;
   color: red;
-}
-
-.social i {
-  color: black;
 }
