Created initial Billboard component Added test background image to Billboard Added headline text to Billboard

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -33,3 +33,13 @@ p, h2, h3, .social i {
   text-decoration: none;
   color: red;
 }
+
+.billboard {
+  background-color: rgb(228, 230, 211);
+  background-image: url('./assets/red-moon.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 0;
+  height: 80vh;
+}
